tests/error/poly_errors_py312/non_nat2.py
from guppylang.decorator import guppy


@guppy.struct
class MyStruct[I: bool]:
    pass


MyStruct.compile()
