tests/error/poly_errors_py312/non_nat2.err
Error: Unsupported (at $FILE:5:18)
  | 
3 | 
4 | @guppy.struct
5 | class MyStruct[I: bool]:
  |                   ^^^^ `bool` generic parameters are not supported

Guppy compilation failed due to 1 previous error
